# gunsim

./: .gitmodules  LICENSE  README.md
app/gund_solvers/: CMakeLists.txt
cmake_project/: common_structs.cmake  comparative_analysis.cmake  filters.cmake  gun_model.cmake  gund_parser.cmake  gund_utility.cmake  internal_filter.cmake  simple_fft_wrap.cmake  spectrum_solver.cmake  spectrum_solver_test.cmake
data/: 1500C_2m_V100_P2000.sig  1500C_2m_V200_P2000.sig  1500C_2m_V500_P2000.sig  1500C_6m_V100_P2000.sig  1500C_6m_V200_P2000.sig  1500C_6m_V500_P2000.sig
lib/common_structs/: CMakeLists.txt
lib/common_structs/include/: gund_structs.h  gund_utility.h  signature_structs.h  spectrum_solver_structs.h
lib/common_structs/src/: gund_utility.cpp
lib/comparative_analysis/: CMakeLists.txt
lib/comparative_analysis/include/: comparative_analysis.h
lib/comparative_analysis/src/: comparative_analysis.cpp
lib/filters/: CMakeLists.txt
lib/filters/include/: bandpassfilter.h  common.h  filter.h  filterscommon.h  q_filter.h  wienerfilter.h
lib/filters/src/: bandpassfilter.cpp  common.cpp  filter.cpp  filterscommon.cpp  q_filter.cpp  wienerfilter.cpp
lib/gun_model/: CMakeLists.txt
lib/gun_model/include/: gun_model.h  gun_parameters_table.h  notional_source_processor.h  sig_optimizer.h
lib/gun_model/src/: gun_model.cpp  gun_parameters_table.cpp  notional_source_processor.cpp  sig_optimizer.cpp
lib/gund_parser/: CMakeLists.txt
lib/gund_parser/include/: gund_format_parser.h  gund_json_parser.h
lib/gund_parser/src/: gund_format_parser.cpp  gund_json_parser.cpp
lib/gund_utility/: CMakeLists.txt
lib/gund_utility/include/: gund_structs.h  gund_utility.h
lib/gund_utility/src/: gund_utility.cpp
lib/internal_filter/: CMakeLists.txt
lib/internal_filter/include/: internal_filter.h
lib/internal_filter/src/: internal_filter.cpp
lib/spectrum_solver/: CMakeLists.txt
lib/spectrum_solver/include/: direct_diag.h  energy_comp.h  fourier_solver.h  internal_filter.h  spectrum_solver.h  spectrum_solver_structs.h
lib/spectrum_solver/src/: direct_diag.cpp  energy_comp.cpp  fourier_solver.cpp  internal_filter.cpp  spectrum_solver.cpp
script/: autoclicker.py  mouse.py
test/spectrum_solver_test/: CMakeLists.txt  test.cpp
test/spectrum_solver_test/test_data/: solver_check.json
